# portfolio_assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  notebook.ipynb  pyproject.toml  render.yaml  report.md  requirements.txt  vercel.json
db/: chroma.sqlite3
src/portfolio_assistant/: crew.py  main.py
src/portfolio_assistant/config/: agents.yaml  tasks.yaml
src/portfolio_assistant/models/: output_models.py
src/portfolio_assistant/tools/: custom_tool.py
