[project]
name = "portfolio_assistant"
version = "0.1.0"
description = "portfolio_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
portfolio_assistant = "portfolio_assistant.main:run"
run_crew = "portfolio_assistant.main:run"
train = "portfolio_assistant.main:train"
replay = "portfolio_assistant.main:replay"
test = "portfolio_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
